--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Command line interface for push notifications.",
   "main": "main.js",
   "scripts": {
-    "test": "./node_modules/mocha/bin/mocha ./tests/**"
+    "test": "./node_modules/mocha/bin/mocha ./tests/**",
+    "utils": "node utils.js"
   },
   "bin": {
     "urban-airship-cli": "main.js"
